--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nezolialauncher",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "productName": "Nezolia Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "Nezolia (https://nezolia.fr)",
@@ -34,6 +34,7 @@
     "fs-extra": "^9.0.1",
     "github-syntax-dark": "^0.5.0",
     "jquery": "^3.5.1",
+    "lookpath": "^1.1.0",
     "request": "^2.88.2",
     "semver": "^7.3.2",
     "tar-fs": "^2.1.0",
